# agent-wormhole

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  railway.toml
.github/workflows/: publish.yml
.working/: gen_words.py
docs/: 2026-04-15-agent-wormhole-design.md
docs/superpowers/plans/: 2026-04-15-agent-wormhole.md  2026-04-15-relay-server.md
docs/superpowers/specs/: 2026-04-15-relay-server-design.md
skill/: SKILL.md
skill/agent-wormhole/: skill.md
src/agent_wormhole/: SKILL.md  channel.py  cli.py  config.py  crypto.py  fs.py  protocol.py  transport.py  wordlist.py  words.txt
src/agent_wormhole/relay/: rate_limiter.py  redis_manager.py  server.py
tests/: test_channel.py  test_config.py  test_crypto.py  test_fs.py  test_integration.py  test_protocol.py  test_relay_e2e.py  test_relay_rate_limiter.py  test_relay_redis.py  test_relay_server.py  test_transport.py  test_wordlist.py
