[project]
name = "agent-wormhole"
version = "0.1.1"
description = "Secure ephemeral channels for AI agent communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Daniel", email = "daniel@slingshot.xyz" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "typer>=0.9",
    "spake2>=0.9",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/noncuro/agent-wormhole"
Repository = "https://github.com/noncuro/agent-wormhole"
Issues = "https://github.com/noncuro/agent-wormhole/issues"

[project.scripts]
agent-wormhole = "agent_wormhole.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis[lua]>=2.26",
    "httpx>=0.28",
]
